staff/static/staff/staff.scss
@import "login";

#staff {
  display: flex;
  flex-direction: column;
  max-height: 100vh;
  margin: 0;
  padding: 0;
}

#menu {
  flex-shrink: 0;
}

#column-wrapper {
  display: flex;
  align-items: stretch;
  flex-grow: 1;
}

#sidebar {

  padding: 0;
  margin: 0;
  background-color: darkgray;

  display: flex;
  flex-direction: column;

  .sidebar-menu, .sidebar-footer {
    color: #ccc;
    background-color: #555;
    box-sizing: border-box;
  }

  .sidebar-menu {
    flex-grow: 1;
    white-space: nowrap;
    margin-top: 0;
    padding-bottom: 1em;

    a:first-child {
      margin-top: 0.75em;
    }

    .item, .section {
      padding: 0.25rem 1rem;
      text-decoration: none;
      color: inherit;
      display: block;
    }

    .section {
      padding-top: 1em;
      font-weight: bold;
    }

    .item {
      cursor: pointer;
    }

    .item:hover {
      color: #ccc;
      background-color: #666;
    }

    .item.disabled:hover {
      background-color: inherit;
    }

  }

  .sidebar-footer {
    margin-top: auto;
    padding: 0.8rem 1rem;
    font-size: 14px;
    font-style: italic;
  }

}


#content-wrapper {
  flex-grow: 1;
  overflow: hidden;
  display: flex;
  flex-direction: column;

  #content {
    padding: 2rem;
    overflow: auto;
    flex-grow: 1;

  }
}

@media (max-width: 575px) {
  #column-wrapper { display: block; }
  #column-wrapper #sidebar { height: auto; width: 100%; }
  #column-wrapper #content-wrapper { overflow-y: visible; }
}

